2008-04-09  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstqueue2.c: (update_buffering),
	(gst_queue_close_temp_location_file), (gst_queue_handle_src_query),
	(gst_queue_src_checkgetrange_function):
	Include extra buffering stats in the buffering message.
	Implement BUFFERING query.

	* gst/playback/gsturidecodebin.c: (do_async_start),
	(do_async_done), (type_found), (setup_streaming), (setup_source),
	(gst_uri_decode_bin_change_state):
	Only add decodebin2 when the type is found in streaming mode.
	Make uridecodebin async to PAUSED even when we don't have decodebin2
	added yet.

2008-04-09  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/gio/gstgio.c: (gst_gio_get_supported_protocols):
	Filter cdda from the supported URI schemes. We can't support
	musicbrainz tags and everything else one expects from a cdda source
	with GIO. Fixes bug #526794.

2008-04-07  Jan Schmidt  <jan.schmidt@sun.com>

	* sys/xvimage/xvimagesink.c (gst_xvimagesink_xvimage_new),
	(gst_xvimagesink_buffer_alloc):
	Fix calculation of 'expected size' for YV12 buffers.
	Be a little more verbose in the debug output for buffer-alloc'ed
	buffers which turn out to have the wrong size.

2008-04-07  Tim-Philipp Müller  <tim at centricular dot net>

	* NEWS:
	* RELEASE:
	* gst-plugins-base.doap:
	  Merge other changes from 0.10.19 release branch.

2008-04-06  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	  (gst_base_audio_sink_class_init):
	* gst-libs/gst/audio/gstbaseaudiosrc.c:
	  (gst_base_audio_src_class_init):
	* gst/playback/gstplayback.c: (plugin_init):
	* gst/volume/gstvolume.c: (plugin_init):
	  Work around missing bits of thread-safety on older GLibs some
	  more to avoid assertions when starting up multiple playbin
	  objects concurrently (see #512382).

2008-04-06  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/pbutils/missing-plugins.c: (copy_and_clean_caps):
	  Remove some more fields.
